# pyOptimalEstimation

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST  README.md  README.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: github-actions-ci.yaml  python-publish.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
pyOptimalEstimation/: __init__.py  pyOEcore.py
pyOptimalEstimation/examples/: dsd_radar.py
pyOptimalEstimation/tests/: test_pyoe.py
