# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[project]
name = 'pyOptimalEstimation'
dynamic = ["version"]
license={text = 'GNU General Public License 3'}
authors=[{name = "Maximilian Maahn"}]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
]

[project.urls]
Homepage = 'https://github.com/maahn/pyOptimalEstimation'

[tool.setuptools_scm]

