[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[project]
name = 'pyOptimalEstimation'
dynamic = ["version", "readme"]
license = {file = "LICENSE.txt"}
authors=[{name = "Maximilian Maahn"}]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
]

[project.urls]
Homepage = 'https://github.com/maahn/pyOptimalEstimation'

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}